# pylogfile

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: conf.py  index.rst  license.rst  modules.rst  pylogfile.rst  pylogfile.scripts.rst  requirements.txt
docs/tutorials/: Introduction.ipynb  Lumberjack.md  WhyPylogfile.ipynb  example.log.hdf  example.log.json  index.rst  old_Lumberjack.md  skip_Lumberjack.ipynb
examples/: example1.py  example2_color_override.py  test.hdf  test.log.hdf  test.log.json
src/: pylogfile.py
src/pylogfile/: __init__.py  base.py  pylogfile.py  test.json
src/pylogfile/scripts/: lumberjack.py
src/pylogfile/scripts/assets/: lumberjack_help.json
src/scripts/: lumberjack.py
src/scripts/assets/: lumberjack_help.json
tests/: test_add_level.py  test_bugfixes.py  test_coverage_gaps.py  test_equivalence.py  test_json_v1_parity.py  test_level_helpers.py  test_log_entry.py  test_log_levels_roundtrip.py  test_logpile_core.py  test_lumberjack_cli.py  test_lumberjack_utils.py  test_markdown.py  test_plflog_formats.py  test_show_logs.py
