[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylogfile"
dynamic = ["version"]
authors = [
  { name="Grant Giesbrecht", email="grant.giesbrecht@colorado.edu" },
]
description = "Universal log files for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
]
dependencies = [
	'numpy >= 1.21.0',
	'h5py >= 3.11.0',
	'colorama >= 0.4.6'
]

[project.urls]
Homepage = "https://github.com/Grant-Giesbrecht/pylogfile"
Issues = "https://github.com/Grant-Giesbrecht/pylogfile/issues"

[project.scripts]
lumber = "pylogfile.scripts.lumberjack:main"

[tool.setuptools.dynamic]
version = {attr = "pylogfile.__version__"}

[tool.setuptools.package-data]
"pylogfile.scripts" = ["assets/*.json"]

[project.license]
file = "LICENSE"
